branches/wip/Archive/9864e03fb118c8fc6b7794be71f2adcc-f674c1a6d04c632b71a62362c0ccfc51/output
+ g++ -std=c++11 -O2 -Wall -pedantic -pthread main.cpp
main.cpp: In function ‘int main()’:
main.cpp:89:32: error: no match for ‘operator|’ (operand types are ‘SomeCrap’ and ‘SomeCrap’)
     SomeCrap s = SomeCrap::lel | SomeCrap::idk;
                                ^
main.cpp:88:12: warning: unused variable ‘m’ [-Wunused-variable]
     MyFlag m = MyFlag::a | MyFlag::c;
            ^
main.cpp:89:14: warning: unused variable ‘s’ [-Wunused-variable]
     SomeCrap s = SomeCrap::lel | SomeCrap::idk;
              ^
